tests/snapshots/parser__until_errors-2.snap
---
source: tests/parser.rs
expression: "parse_err(\"TEXT = ANY UNTILBEFORE ',' UNTIL ';'\")"
---
txtql::parse::unexpected_token

  × expected the end of the repetition, found keyword `UNTIL`
   ╭─[query:1:28]
 1 │ TEXT = ANY UNTILBEFORE ',' UNTIL ';'
   ·                            ──┬──
   ·                              ╰── unexpected keyword `UNTIL`
   ╰────
  help: a repetition takes one stop; to stop at either of two patterns write `UNTIL (a OR b)`
